<resources>
    <string name="app_name">MyWanAndroid</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="bottom_menu_home">首页</string>
    <string name="bottom_menu_square">广场</string>
    <string name="bottom_menu_public">公众号</string>
    <string name="bottom_menu_project">项目</string>
    <string name="bottom_menu_system">体系</string>
    <string name="menu_home_search">搜索</string>
    <string name="growingio_enable">true</string>
    <string name="content_err_infos">碰到问题，请检查网络后重试</string>

    <string name="stick">置顶</string>
    <string name="fresh">新</string>
    <string name="search_history">搜索历史</string>
    <string name="search_clear">清空</string>
    <string name="search_hot_tips">热门搜索</string>
    <string name="search_hint">请输入....</string>

    <string name="lastest_proj">最新项目</string>

    <string name="system_floor_1">一级分类</string>
    <string name="system_floor_2">二级分类</string>
</resources>
