<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:title="@string/bottom_menu_home"
        android:id="@+id/bottom_nav_home"
        android:icon="@drawable/bottom_home"
        android:contentDescription="@string/bottom_menu_home"
        />

    <item
        android:title="@string/bottom_menu_square"
        android:id="@+id/bottom_nav_square"
        android:icon="@drawable/bottom_square"
        android:contentDescription="@string/bottom_menu_square"
        />

    <item
        android:title="@string/bottom_menu_public"
        android:id="@+id/bottom_nav_public"
        android:icon="@drawable/bottom_public"
        android:contentDescription="@string/bottom_menu_public"
        />

    <item
        android:title="@string/bottom_menu_project"
        android:id="@+id/bottom_nav_project"
        android:icon="@drawable/bottom_proj"
        android:contentDescription="@string/bottom_menu_project"
        />

</menu>