<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="searchFragment"
            type="com.xihu.mywanandroid.SearchFragment" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".SearchFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/white">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/navbar_back"
                android:scaleType="centerCrop"
                android:layout_marginHorizontal="10dp"
                android:layout_gravity="center"
                android:scaleY="0.8"
                android:scaleX="0.8"
                android:src="@drawable/navbar_back"
                android:onClick="@{searchFragment::onNavigationUp}"
                />

            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/search_value"
                android:hint="@string/search_hint" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/navbar_search"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:scaleY="0.8"
                android:scaleX="0.8"
                android:layout_marginHorizontal="10dp"
                android:onClick="@{searchFragment::onSearchKey}"
                android:src="@drawable/navbar_search" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#DDFFFFFF" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/search_hotkeys"
            android:text="@string/search_hot_tips"
            android:gravity="left|center_vertical"
            android:padding="10dp" />

        <com.xihu.mywanandroid.ui.view.TagSelectionView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:id="@+id/tagSelectionView" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_history"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:gravity="left|center_vertical" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_clear"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:gravity="right|center_vertical" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/search_history"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="vertical" />
    </LinearLayout>
</layout>